# editor-analyzer

./: .gitignore  DEVELOPMENT_PLAN.md  flutter_rust_bridge.yaml  tree_sitter_binding.sh
editor_app/: copy_tree_sitter.sh  pubspec.yaml
editor_app/android/app/: build.gradle
editor_app/ios/Runner.xcodeproj/: project.pbxproj
editor_app/lib/: main.dart
editor_app/lib/models/: token.dart
editor_app/lib/services/: syntax_highlighter.dart  tokenizer_service.dart  (+1 more)
editor_app/test/: main_ui_test.dart
rust/: Cargo.toml  TREE_SITTER_PHASE_SUMMARY.md
rust-python-ai/: Cargo.toml  IMPROVEMENTS_SUMMARY.md
rust-python-ai/rpa-annotate-snippets/: Cargo.toml
rust-python-ai/rpa-annotate-snippets/src/: lib.rs  snippet.rs
rust-python-ai/rpa-annotate-snippets/src/renderer/: display_list.rs  margin.rs  mod.rs  styled_buffer.rs
rust-python-ai/rpa-macros/: Cargo.toml
rust-python-ai/rpa-macros/src/: config.rs
rust-python-ai/rpa-python-stdlib/: Cargo.toml
rust-python-ai/rpa-python-stdlib/src/: str.rs
rust-python-ai/rpa-python-trivia/: Cargo.toml
rust-python-ai/rpa-python-trivia/src/: comment_ranges.rs  comments.rs  cursor.rs  pragmas.rs  textwrap.rs  tokenizer.rs  whitespace.rs
rust-python-ai/rpa-source-file/: Cargo.toml
rust-python-ai/rpa-source-file/src/: lib.rs  line_index.rs  line_ranges.rs  newlines.rs
rust-python-ai/rpa-text-size/: Cargo.toml
rust-python-ai/rpa-text-size/src/: range.rs  size.rs
rust-python-ai/rpa-text-size/tests/: auto_traits.rs  constructors.rs  indexing.rs  main.rs  serde.rs
rust/src/: lib.rs
rust/src/ai/: mod.rs
rust/src/analysis/: mod.rs
rust/src/bridge/: mod.rs
rust/src/core/: common.rs  mod.rs
rust/src/core/errors/: ai_error.rs  codes.rs  config_error.rs  core_error.rs  file_error.rs  lsp_error.rs  mod.rs  network_error.rs  parser_error.rs  semantic_error.rs
rust/src/core/traits/: ai.rs  ast.rs  cache.rs  config.rs  diagnostic.rs  mod.rs  object_pool.rs  symbol.rs
rust/src/core/types/: diagnostic.rs  document.rs  language.rs  mod.rs  span.rs  symbol.rs
rust/src/core/utils/: hash.rs  mod.rs  text.rs  validation.rs
rust/src/lsp/: mod.rs
rust/src/parsers/: mod.rs  tree_sitter.rs
rust/tests/: bench_cache.rs  integration_core.rs  integration_tree_sitter.rs
tree_sitter_binding/: ffigen.yaml  pubspec.yaml
tree_sitter_binding/.dart_tool/: package_config.json
tree_sitter_binding/lib/: example.dart  line_token_test.dart  line_tokenizer.dart  query_engine.dart  query_example.dart  simple_query_test.dart  test_all_queries.dart
(+9 files in other folders)
