[package]
name = "rpa-macros"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["proc-macro"]

[dependencies]
heck = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["derive", "parsing", "extra-traits", "full"] }
itertools = { workspace = true }

rpa-python-trivia = { path = "../rpa-python-trivia" }