[package]
name = "rpa-text-size"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true, optional = true }
get-size2 = { workspace = true, optional = true }

[features]
default = ["serde"]
serde = ["dep:serde"]
get-size = ["dep:get-size2"]
schemars = []

[dev-dependencies]
static_assertions = "1"
serde_test = "1"
